workloads/c4-solver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: c4-solver
  namespace: c4-solver
  labels:
    app: c4-solver
spec:
  selector:
    app: c4-solver
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
