workloads/c4-solver/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: c4-solver
  namespace: c4-solver
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - c4-solver.cyberdan.dev
  rules:
    - backendRefs:
        - name: c4-solver
          port: 80
